--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 asgiref==3.2.10
 certifi==2021.10.8
 dj-database-url==0.5.0
-Django @ file:///tmp/build/80754af9/django_1601563330930/work
+Django==3.1.2
 django-filter==21.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
-psycopg2 @ file:///tmp/build/80754af9/psycopg2_1594305108220/work
+psycopg2==2.8.5
 python-decouple==3.5
 pytz==2020.1
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse==0.4.1
